test/parsing/precedence/new-mgmt-q-bang.good
new-mgmt-q-bang.chpl:3: error: unmanaged object
