test/parsing/precedence/new-mgmt-q-bang.chpl

var x = new unmanaged object()?!;
compilerError(x.type:string);
